--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SuperUsers Team</title>
+    <title>Projects Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,24 +28,15 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Meet the Team</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">(Input Name)'s Projects</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-            </li>
 			<li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Get a quote</a>
             </li>
           </ul>
         </div>
@@ -66,14 +57,11 @@
      <!-- Portfolio Grid Section -->
   <section id="portfolio">
       <div class="container">
-        <h2 class="text-center">Portfolio</h2>
         <div class="row">
-
-		<div class="col-sm-4 portfolio-item">
-		  <img class="img-fluid cabin" src="img/portfolio/cabin.png" alt="">
-		</div>
-         
-		 <div class="col-sm-4 portfolio-item">
+          <div class="col-sm-4 portfolio-item">
+              <img class="img-fluid cabin" src="img/portfolio/cabin.png" alt="">
+          </div>
+          <div class="col-sm-4 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
@@ -110,7 +98,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid arbaz" src="img/portfolio/arbaz_img.jpg" alt="">
+              <img class="img-fluid arbaz" src="img/portfolio/safe.png" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -126,42 +114,14 @@
         </div>
       </div>
     </section> 
-
+	
 	<script>
 		var cabin = document.querySelector(".cabin");
 		cabin.onclick = function() {
-			window.location.href = "projects.html";
+			window.location.href = "project.html";
 		};
 	</script>	
-	
-    <!-- About Section -->
-    <section class="success" id="about">
-      <div class="container">
-        <h2 class="text-center">About SuperUsers</h2>
-        <div class="row">
-          <div class="col-lg-12 ml-auto">
-            <p style="text-align:center;">Put in information about SuperUsers.</p>
-          </div>
-          <!-- <div class="col-lg-6 mr-auto">
-            <p></p>
-          </div> -->
-         <!--  <div class="col-lg-8 mx-auto text-center">
-            <a href="#" class="btn btn-lg btn-outline">
-              <i class="fa fa-download"></i>
-              Download Theme
-            </a>
-          </div> -->
-        </div>
-      </div>
-    </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-      <div class="container">
-        <h2 class="text-center">Contact Us</h2>
-        <hr class="star-primary">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
 			
@@ -174,7 +134,7 @@
     <input type="submit" value="Send">
 </form> -->
 			
-            <form name="sentMessage" id="contactForm" action ="https://formspree.io/arbazaziz1999@gmail.com" method="POST" novalidate>
+            <!-- <form name="sentMessage" id="contactForm" action ="https://formspree.io/arbazaziz1999@gmail.com" method="POST" novalidate>
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
                   <label>Name</label>
@@ -199,70 +159,14 @@
               <br>
               <div id="success"></div>
               <div class="form-group">
-                <!-- <button type="submit" class="btn btn-success btn-lg" id="sendMessageButton" value="Send">Send</button> -->
+                <button type="submit" class="btn btn-success btn-lg" id="sendMessageButton" value="Send">Send</button>
 				<input type = "submit" value = "Send">
               </div>
             </form>
           </div>
         </div>
       </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="text-center">
-      <div class="footer-above">
-        <div class="container">
-          <div class="row">
-            <div class="footer-col col-md-4">
-              <h3>Around the Web</h3>
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-google-plus"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-linkedin"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-dribbble"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="footer-below">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              Copyright &copy; Arbaz's Website 2017
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-top d-lg-none">
-      <a class="btn btn-primary js-scroll-trigger" href="#page-top">
-        <i class="fa fa-chevron-up"></i>
-      </a>
-    </div>
+    </section> -->
 
     <!-- Portfolio Modals -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
@@ -527,7 +431,7 @@
     <script src="js/contact_me.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/freelancer.js"></script>
+    <script src="js/freelancer.min.js"></script>
 
   </body>
 
