pushing wireframe/mock up

--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
 					<h1> Input project name here </h1>
 				</div>
 				<div class = "col-sm-8 text-right">
-					<h1> Want something like this? </h1>
+					<a href = "service.html"><h1>Get a Quote</h1><a/>
 				</div>
 			</nav>
 		<section class = "container-fluid">
