--- a/unique.html
+++ b/unique.html
@@ -2,27 +2,27 @@
 <html>
 	<head>
 		<title> Unique URLs </title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	
-	<style>
-		* {
-			<!-- border: 1px solid red; -->
-		}
+		<style>
+			* {
+				<!-- border: 1px solid red; -->
+			}
+			
+			#navbar {
+				background-color: black;
+				color: white;
+				width: 100%;
+				padding: 2% 2% 2% 2%;
+			}
+			
+			hr {
+				height: 2px;
+				background-color: black;
+			}
 		
-		#navbar {
-			background-color: black;
-			color: white;
-			width: 100%;
-			padding: 2% 2% 2% 2%;
-		}
-		
-		hr {
-			height: 2px;
-			background-color: black;
-		}
-	
-		
-	</style>
+			
+		</style>
 	</head>
 	<body>
 		<nav id = "navbar">
@@ -31,9 +31,11 @@
 					<h1> Input person's name here </h1>
 				</div>
 				<div class = "col-sm-8 text-right">
-					<a href = "projects.html"><h1> Projects </h1></a>
+					<a href = "service.html"><h1>Get a Quote</h1></a>
+					<a href = "projects.html"><h1>Projects</h1></a>					
 				</div>
-			</nav>
+			</div>
+		</nav>
 		<section class = "container-fluid">
 			<div class = "row">
 				<div class = "col-sm-4">
