--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
 			<li class="nav-item">
-              <a class="nav-link" href="index.html">Get a quote</a>
+              <a class="nav-link" href="service.html">Get a quote</a>
             </li>
           </ul>
         </div>
