--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/png" href="images/favicon.png">
-        <title>Software Development</title>
+        <title>Team2</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="author" content="">
@@ -39,10 +39,8 @@
         <!-- modernizr js -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <!-- jquery -->
-		
-       <!--  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
-        
-		<!-- owl carouserl js -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <!-- owl carouserl js -->
         <script src="js/owl.carousel.min.js"></script>
         <!-- bootstrap js -->
 
@@ -77,6 +75,23 @@
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script src="js/index.js"></script>
 
+		<!-- 
+			From portrait page
+			
+		-->
+		
+    <!-- Bootstrap core CSS -->
+    <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+ -->
+    <!-- Custom fonts for this template -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- Custom styles for this template -->
+	<link href="css/freelancer.css" rel="stylesheet">
+ -->		
+		
     </head>
     <body>
         <!--
@@ -125,86 +140,78 @@
         </header>
 
         <!--
-        ==================================================
-        Slider Section Start
-        ================================================== -->
-        <section id="hero-area" >
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <div class="block wow fadeInUp" data-wow-delay=".3s">
-
-                            <!-- Slider -->
-                            <section class="cd-intro">
-                                <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s" >
-                                <span>Software Development</span><br>
-
-                                </h1>
-                                </section> <!-- cd-intro -->
-                                <!-- /.slider -->
-                                <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
-                                	Our team of software developers have various skills and work with you to engineer what you need.
-                                </h2>
-                                <a href="service.html" class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".9s">Get A Quote!</a>
-
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section><!--/#main-slider-->
-            <!--
-            ==================================================
-            Slider Section Start
-            ================================================== -->
-            <section id="about">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
-                                <h2>
-                               ABOUT
-                                </h2>
-                                <p>
-									We create simple landing pages, or one pager websites for personal profiles, events, companies and startups.
-
-                                    Expert developers come together and have the capability of building iOS, Android as well as web applications.
-
-                                    <p>We work with your designs and frameworks in order to ensure that we fully encompass your product’s vision</p>
-
-
-
-                                </p>
-                            </div>
-
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                                <img src="images/about/about.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section> <!-- KEEP COMMENTED /#about -->
-            <!--
 
             ==================================================
             Call To Action Section Start
-            ================================================== -->
-            <section id="call-to-action">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="block">
-                                <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">SO WHAT  DO YOU THINK ?</h1>
-                                <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Ready to start your next project with us? That's great! </p>
-                                <a href="service.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Get A Quote</a>
-                            </div>
-                        </div>
+            ================================================== -->	
+			 <div class="container">
+        <h2 class="text-center">Portfolio</h2>
+        <div class="row">
 
-                    </div>
+		<div class="col-sm-4 portfolio-item">
+		  <img class="img-fluid cabin" src="img/portfolio/cabin.png" alt="">
+		</div>
+         
+		 <div class="col-sm-4 portfolio-item">
+            <a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  <i class="fa fa-search-plus fa-3x"></i>
                 </div>
-            </section>
+              </div>
+              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+            </a>
+          </div>
+          <div class="col-sm-4 portfolio-item">
+            <a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+            </a>
+          </div>
+          <div class="col-sm-4 portfolio-item">
+            <a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/game.png" alt="">
+            </a>
+          </div>
+          <div class="col-sm-4 portfolio-item">
+            <a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid arbaz" src="img/portfolio/arbaz_img.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-sm-4 portfolio-item">
+            <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
+            </a>
+          </div>
+        </div>
+      </div> 
+
+	<script>
+		var cabin = document.querySelector(".cabin");
+		cabin.onclick = function() {
+			window.location.href = "unique.html";
+		};
+	</script>
+			
             <!--
             ==================================================
             Footer Section Start
