--- a/team.html
+++ b/team.html
@@ -83,10 +83,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    </button>
-
-
-                   
+                    </button>                   
                     <div class="navbar-brand">
                         <a href="index.html" >
                             <img src="images/logo.png" alt="">
@@ -98,6 +95,7 @@
                     <div class="main-menu">
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="service.html">Get A Quote</a></li>
+							<li><a href="#">(Input Link Here)</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -106,73 +104,93 @@
 			<section id = "title">
 				<div class = "container">
 					<div class = "row">
-						<h1> Meet the Team </h1>
+						<h1 style = "text-transform: uppercase;"> (Input Page Name-tag here) </h1>
 					</div>
 				</div>
             </section>
 			
 			 <section id="portfolio">
-      <div class="container">
-        <div class="row">
-
-		<div class="col-sm-4 portfolio-item">
-		  <img class="img-fluid cabin" src="img/portfolio/cabin.png" alt="">
-		</div>
-         
-		 <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-            </a>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/circus.png"  alt="">
-            </a>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
-            </a>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid arbaz" src="img/portfolio/arbaz_img.jpg"  alt="">
-            </a>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section> 
-			
-			
+			  <div class="container">
+				<div class="row">
+				<div class="col-sm-4 portfolio-item contain">
+				  <!-- replace .png file to change picture -->
+				  <img class="img-fluid image" src="img/portfolio/cabin.png" alt="">
+				<div class = "overlay"> 
+				  <div class="text">Input Text Here</div>
+				</div>
+				</div>	 
+				 <div class="col-sm-4 portfolio-item">
+					<a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
+					  <div class="caption">
+						<div class="caption-content">
+						  <i class="fa fa-search-plus fa-3x"></i>
+						</div>
+					  </div>
+					  <!-- replace .png file to change picture -->
+					  <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+					  <div class = "overlay"> 
+						<div class="text">Input Text Here</div>
+					  </div>
+					</a>
+				  </div>
+				  <div class="col-sm-4 portfolio-item">
+					<a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
+					  <div class="caption">
+						<div class="caption-content">
+						  <i class="fa fa-search-plus fa-3x"></i>
+						</div>
+					  </div>		  
+					  <!-- replace .png file to change picture -->
+					  <img class="img-fluid" src="img/portfolio/circus.png"  alt="">
+					</a>
+					<div class = "overlay"> 
+						<div class="text">Input Text Here</div>
+					</div>
+				  </div>
+				  <div class="col-sm-4 portfolio-item">
+					<a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
+					  <div class="caption">
+						<div class="caption-content">
+						  <i class="fa fa-search-plus fa-3x"></i>
+						</div>
+					  </div>
+					  <!-- replace .png file to change picture --> 
+					  <img class="img-fluid" src="img/portfolio/game.png" alt="">
+					</a>
+					<div class = "overlay"> 
+						<div class="text">Input Text Here</div>
+					  </div>
+				  </div>
+				  <div class="col-sm-4 portfolio-item">
+					<a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
+					  <div class="caption">
+						<div class="caption-content">
+						  <i class="fa fa-search-plus fa-3x"></i>
+						</div>
+					  </div>
+					  <!-- replace .png file to change picture -->	  
+					  <img class="img-fluid arbaz" src="img/portfolio/arbaz_img.jpg"  alt="">
+					</a>
+					<div class = "overlay"> 
+						<div class="text">Input Text Here</div>
+					  </div>
+				  </div>
+				  <div class="col-sm-4 portfolio-item">
+					<a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
+					  <div class="caption">
+						<div class="caption-content">
+						  <i class="fa fa-search-plus fa-3x"></i>
+						</div>
+					  </div>
+					  <!-- replace .png file to change picture -->
+					  <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
+					</a>
+					<div class = "overlay"> 
+						<div class="text">Input Text Here</div>
+					  </div>
+				  </div>
+				</div>
+			  </div>
+			</section> 
         </body>
     </html>
