--- a/team.html
+++ b/team.html
@@ -68,7 +68,7 @@
         <link rel="stylesheet" href="css/style.css">
         
 		
-		<link rel = "stylesheet" href = "css/custom.css">
+		<link rel = "stylesheet" href = "css/cards.css">
     </head>
     <body>
         <!--
@@ -194,3 +194,5 @@
 			</section> 
         </body>
     </html>
+	
+	<!-- https://www.w3schools.com/howto/howto_css_image_overlay.asp -->
