Revised button properties on unique

--- a/unique.html
+++ b/unique.html
@@ -119,13 +119,13 @@
 						  </div>
 						  <!-- replace .png file to change picture -->
 						  <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-						  <a class = "btn btn-primary projects"> My Projects </a>
+						  <a class = "btn btn-default projects"> My Projects </a>
 						</div>
 						<div class = "col-sm-8"> 
 							<div class = "bio" style = "word-wrap: break-word">
 								Input text about me here. lksafjoaifsaoifjsaoifjasoifjsaoifjsaoifjasoifjsaoijfffffffffffffffffffffffffffffffaoifjosafjosaifjsaoifsaoifdal;sfnoa;snfdoasinfoiasdjfaosfoasifdlfns;aodfnsalkfnaslkfdnasoifnaslfknasofnsdlfknaofnidsfasnfasinf/.... tada
 							</div>
-							<a class = "btn btn-primary projects"> Book Me </a>
+							<a class = "btn btn-success book"> Book a Project With Me </a>
 						</div>
 					</div>
 				</div>
