added link from team page to project page

--- a/team.html
+++ b/team.html
@@ -112,15 +112,22 @@
 			 <section id="portfolio">
 			  <div class="container">
 				<div class="row">
-				<div class="col-sm-4 portfolio-item contain">
-				  <!-- replace .png file to change picture -->
-				  <img class="img-fluid image" src="img/portfolio/cabin.png" alt="">
-				<div class = "overlay"> 
-				  <div class="text">Input Text Here</div>
-				</div>
-				</div>	 
+				<div class="col-sm-4 portfolio-item">
+					<a class="portfolio-link" href="unique.html" data-toggle="modal">
+					  <div class="caption">
+						<div class="caption-content">
+						  <i class="fa fa-search-plus fa-3x"></i>
+						</div>
+					  </div>
+					  <!-- replace .png file to change picture -->
+					  <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+					  <div class = "overlay"> 
+						<div class="text">Input Text Here</div>
+					  </div>
+					</a>
+				  </div>				
 				 <div class="col-sm-4 portfolio-item">
-					<a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
+					<a class="portfolio-link" href="unique.html" data-toggle="modal">
 					  <div class="caption">
 						<div class="caption-content">
 						  <i class="fa fa-search-plus fa-3x"></i>
@@ -134,7 +141,7 @@
 					</a>
 				  </div>
 				  <div class="col-sm-4 portfolio-item">
-					<a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
+					<a class="portfolio-link" href="unique.html" data-toggle="modal">
 					  <div class="caption">
 						<div class="caption-content">
 						  <i class="fa fa-search-plus fa-3x"></i>
@@ -142,13 +149,13 @@
 					  </div>		  
 					  <!-- replace .png file to change picture -->
 					  <img class="img-fluid" src="img/portfolio/circus.png"  alt="">
-					</a>
-					<div class = "overlay"> 
+					  <div class = "overlay"> 
 						<div class="text">Input Text Here</div>
-					</div>
+					  </div>
+					</a>
 				  </div>
 				  <div class="col-sm-4 portfolio-item">
-					<a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
+					<a class="portfolio-link" href="unique.html" data-toggle="modal">
 					  <div class="caption">
 						<div class="caption-content">
 						  <i class="fa fa-search-plus fa-3x"></i>
@@ -156,13 +163,13 @@
 					  </div>
 					  <!-- replace .png file to change picture --> 
 					  <img class="img-fluid" src="img/portfolio/game.png" alt="">
-					</a>
-					<div class = "overlay"> 
+					  <div class = "overlay"> 
 						<div class="text">Input Text Here</div>
 					  </div>
+					</a>
 				  </div>
 				  <div class="col-sm-4 portfolio-item">
-					<a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
+					<a class="portfolio-link" href="unique.html" data-toggle="modal">
 					  <div class="caption">
 						<div class="caption-content">
 						  <i class="fa fa-search-plus fa-3x"></i>
@@ -170,13 +177,13 @@
 					  </div>
 					  <!-- replace .png file to change picture -->	  
 					  <img class="img-fluid arbaz" src="img/portfolio/arbaz_img.jpg"  alt="">
-					</a>
-					<div class = "overlay"> 
+					  <div class = "overlay"> 
 						<div class="text">Input Text Here</div>
 					  </div>
+					</a>
 				  </div>
 				  <div class="col-sm-4 portfolio-item">
-					<a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
+					<a class="portfolio-link" href="unique.html" data-toggle="modal">
 					  <div class="caption">
 						<div class="caption-content">
 						  <i class="fa fa-search-plus fa-3x"></i>
@@ -184,10 +191,10 @@
 					  </div>
 					  <!-- replace .png file to change picture -->
 					  <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-					</a>
-					<div class = "overlay"> 
+					  <div class = "overlay"> 
 						<div class="text">Input Text Here</div>
 					  </div>
+					</a>
 				  </div>
 				</div>
 			  </div>
