--- a/unique.html
+++ b/unique.html
@@ -126,11 +126,18 @@
 								Input text about me here. lksafjoaifsaoifjsaoifjasoifjsaoifjsaoifjasoifjsaoijfffffffffffffffffffffffffffffffaoifjosafjosaifjsaoifsaoifdal;sfnoa;snfdoasinfoiasdjfaosfoasifdlfns;aodfnsalkfnaslkfdnasoifnaslfknasofnsdlfknaofnidsfasnfasinf/.... tada
 							</div>
 							<a class = "btn btn-success book"> Book a Project With Me </a>
-						</div>
+							<!--  Uncomment this part for images in unique projects page
+							
+							<div class = "extraImage">
+								<img src = "">
+							</div>
+ -->						</div>
 					</div>
 				</div>
 			</section>
 			
+			
+
         </body>
     </html>
 	
